# shadertastic

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/actions/build-deps/: action.yaml
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/actions/run-cmake-format/: action.yaml
.github/scripts/: .Aptfile  .Brewfile  .build.zsh  .package.zsh  Build-Windows.ps1  Package-Windows.ps1
.github/workflows/: build-project.yaml
cmake/linux/: defaults.cmake
devtools/shadership/: CMakeLists.txt  shadership.cpp
devtools/shadership/cmake/windows/resources/: installer-Windows.iss.in
src/: plugin-main.cpp
